[package]
name = "smartcropper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
image = "0.23"
imageproc = "0.23.0"
num-traits = "0.2.15"
rustface = {path = "./rustface"}
